alteração na imagem do fone de ouvido

--- a/style.css
+++ b/style.css
@@ -48,14 +48,13 @@ input[type="number"] {
 .conteudo-principal {
   filter: drop-shadow(0px 0px 70px rgba(2, 189, 255, 0.40));
   min-height: 100%;
-  padding: 5rem 6.5rem;
+  padding: 5rem 6.5rem 15rem 6.5rem;
   
   display: grid;
   grid-template-columns: 1.375fr 1fr;
   column-gap: 5rem;  
-
   position: relative;
-  background-position: left bottom -40px;
+  
 }
 
 .imagem-produto{
@@ -66,6 +65,10 @@ input[type="number"] {
 .imagem-controle {
   margin: 10% 0 -50% 30%;
   width: 60%;
+}
+
+.imagem-fone {
+  margin: 0 0 -80% 0;
 }
 
 
