--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ input[type="number"] {
 }
 
 .conteudo-principal {
-  filter: drop-shadow(0px 0px 70px rgba(2, 189, 255, 0.40));
+  filter: drop-shadow(0px 0px 70px rgba(27, 2, 255, 0.4));
   min-height: 100%;
   padding: 5rem 6.5rem 15rem 6.5rem;
   
@@ -114,7 +114,7 @@ input[type="number"] {
   border-radius: 0.5rem;
   border: 1px solid var(--Light-Blue, #1875E8);
 
-  color: var(--Void, #01080E);
+  color: var(--Void, #ffffff);
   font-family: Inter;
   font-size: 1.3125rem;
   font-style: italic;
@@ -255,13 +255,22 @@ input[type="number"] {
   .conteudo-principal {
     display: flex;
     flex-direction: column;
+    align-items: center;
        
   }
 
+  .titulo {
+    font-size: 3em;
+    margin-top: 3em;
+  }
+
+  .imagem {
+    display: flex;
+    justify-content: center;
+  }
   
   .imagem-produto, .imagem-controle, .imagem-fone {
     width: 100%;
     margin: 10% auto;
   }
-}
 }
