--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ input[type="number"] {
   border-radius: 0.5rem;
   border: 1px solid var(--Light-Blue, #1875E8);
 
-  color: var(--Void, #ffffff);
+  color: var(--Void, #000000);
   font-family: Inter;
   font-size: 1.3125rem;
   font-style: italic;
@@ -262,6 +262,10 @@ input[type="number"] {
   .titulo {
     font-size: 3em;
     margin-top: 3em;
+  }
+
+  .botoes-wrapper {
+    flex-wrap: wrap;
   }
 
   .imagem {
