--- a/style.css
+++ b/style.css
@@ -253,6 +253,7 @@ input[type="number"] {
 
 @media screen and (max-width: 480px) {
   .conteudo-principal {
+    filter: none;
     display: flex;
     flex-direction: column;
     align-items: center;
